--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,3 @@
-body {
-  margin: 0;
-  font-family: "Urbanist", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
