--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* body {
-  font-family: Vazir, sans-serif;
-} */
+body {
+  font-family: Shabnam, sans-serif;
+}
 
 .twoLinesText {
   overflow: hidden;
