--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,11 +5,14 @@ body {
   font-family: Shabnam, sans-serif;
 }
 
-.twoLinesText {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2; /* number of lines to show */
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100vh;
 }
