--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,5 +1,5 @@
 .container-slider {
-  max-width: 100%;
+  width: 100%;
   height: 350px;
   margin: 20px 0;
   position: relative;
@@ -71,5 +71,5 @@
   background: #f1f1f1;
 }
 .dot.active {
-  background: rgb(32, 32, 32);
+  background: #03dac5;
 }
