--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,44 @@ body {
 body {
   height: 100vh;
 }
+
+.center-all {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-bottom: 10px;
+  background: white;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  background: white;
+  z-index: 9999;
+  transition: all 300ms ease-in-out;
+}
+
+.scroll-down header {
+  transform: translate3d(0, -100%, 0);
+}
+.scroll-up header {
+  filter: drop-shadow(0 -10px 20px #aaa);
+}
+.menu-is-open {
+  overflow: hidden;
+}
+.menu-is-open header {
+  filter: none;
+}
