--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -6,9 +6,10 @@
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .container-slider {
     margin: 100px 10px 0;
+    height: 300px;
   }
 }
 .slide {
