--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -6,12 +6,37 @@
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-@media screen and (max-width: 800px) {
+
+@media screen and (min-width: 320px) {
+  .container-slider {
+    margin: 100px 0px 0;
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 480px) {
   .container-slider {
     margin: 100px 10px 0;
     height: 300px;
+    padding: 200px;
   }
 }
+@media screen and (min-width: 640px) {
+  .container-slider {
+    margin: 100px 10px 0;
+    height: 300px;
+    padding: 200px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-slider {
+    margin: 100px 10px 0;
+    height: 300px;
+    padding: 200px;
+  }
+}
+
 .slide {
   width: 100%;
   height: 100%;
