--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -10,30 +10,34 @@
 @media screen and (min-width: 320px) {
   .container-slider {
     margin: 100px 0px 0;
-    height: 200px;
+    height: 130px;
   }
 }
 
 @media screen and (min-width: 480px) {
   .container-slider {
-    margin: 100px 10px 0;
+    margin: 100px 0px 0;
     height: 300px;
-    padding: 200px;
   }
 }
 @media screen and (min-width: 640px) {
   .container-slider {
-    margin: 100px 10px 0;
+    margin: 100px 0px 0;
     height: 300px;
-    padding: 200px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container-slider {
-    margin: 100px 10px 0;
+    margin: 100px 0px 0;
     height: 300px;
-    padding: 200px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container-slider {
+    margin: 140px 0px 0;
+    height: 350px;
   }
 }
 
